[package]
name = "vmtop-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.30"
chrono = "0.4"
tui = "0.19.0"
crossterm = "0.29.0"
clap = { version = "4.4.0", features = ["derive"] }

[target.x86_64-unknown-linux-musl]
# Enable static linking
rustflags = ["-C", "target-feature=+crt-static"]
